feat: refactor EbeanWrapper to take a full ebean config
BREAKING CHANGE: the EbeanWrapper now takes a Config parameter containing all of the needed configuration for the wrapper. Including a full ebean database and/or datasource config.