@@ -2,14 +2,17 @@ package net.silthus.ebean;
 
 import io.ebean.Database;
 import io.ebean.DatabaseFactory;
-import io.ebean.datasource.DataSourceConfig;
-import lombok.NonNull;
 import org.apache.commons.io.FileUtils;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.sql.Driver;
+import java.sql.DriverManager;
+import java.sql.SQLException;
 
 /**
  * The ebean wrapper takes a simplified database config and creates a new ebean database connection with it.
@@ -22,68 +25,29 @@ import java.net.URLClassLoader;
  */
 public class EbeanWrapper implements AutoCloseable {
 
-    private final ClassLoader classLoader;
-    private final io.ebean.config.DatabaseConfig databaseConfig;
-    private final DriverMapping driver;
-    private final File driverPath;
+    private final Config config;
 
     private Database database;
+
+    public EbeanWrapper() {
+        this.config = Config.builder().build();
+    }
 
     /**
      * Creates a new ebean wrapper using the simplified database config and the class loader of this class.
      * <p>
-     * You can create the config with the builder from {@link DatabaseConfig#builder()}.
-     * <p>
-     * Use the alternate {@link #EbeanWrapper(io.ebean.config.DatabaseConfig, DriverMapping, ClassLoader)} constructor to gain full control over the ebean config.
-     *
-     * @param databaseConfig the database config that should be used
-     */
-    public EbeanWrapper(DatabaseConfig databaseConfig) {
-
-        this(databaseConfig, EbeanWrapper.class.getClassLoader());
-    }
-
-    /**
-     * Creates a new ebean wrapper using the simplified database config and the provided class loader.
-     * <p>
-     * You can create the config with the builder from {@link DatabaseConfig#builder()}.
-     * <p>
-     * Use the alternate {@link #EbeanWrapper(io.ebean.config.DatabaseConfig, DriverMapping, ClassLoader)} constructor to gain full control over the ebean config.
+     * You can create the config with the builder from {@link Config#builder()}.
      *
      * @param config the database config that should be used
-     * @param classLoader the class loader that should be used to create the ebean instance
      */
-    public EbeanWrapper(@NonNull DatabaseConfig config, ClassLoader classLoader) {
+    public EbeanWrapper(Config config) {
 
-        this.classLoader = classLoader;
-        this.driver = config.getDriver();
-        this.driverPath = config.getDriverPath();
-
-        databaseConfig = new io.ebean.config.DatabaseConfig();
-        // load configuration defaults from application.yml
-        databaseConfig.loadFromProperties();
-        databaseConfig.setDefaultServer(true);
-        databaseConfig.setRegister(true);
-
-        DataSourceConfig dataSourceConfig = new DataSourceConfig();
-        dataSourceConfig.setUsername(config.getUsername());
-        dataSourceConfig.setPassword(config.getPassword());
-        dataSourceConfig.setUrl(config.getUrl());
-        dataSourceConfig.setDriver(driver.getDriverClass());
-
-        databaseConfig.setDataSourceConfig(dataSourceConfig);
-    }
-
-    public EbeanWrapper(io.ebean.config.DatabaseConfig config, DriverMapping driver, ClassLoader classLoader) {
-        this.databaseConfig = config;
-        this.classLoader = classLoader;
-        this.driver = driver;
-        this.driverPath = new File("drivers");
+        this.config = config;
     }
 
     public File getDriverLocation() {
 
-        return new File(driverPath, driver.getIdentifier() + ".jar");
+        return new File(config.getDriverPath(), config.getDriver().getIdentifier() + ".jar");
     }
 
     public boolean driverExists() {
@@ -91,27 +55,21 @@ public class EbeanWrapper implements AutoCloseable {
         return getDriverLocation().exists();
     }
 
-    public void downloadDriver(boolean overwrite) throws IOException {
-
-        if (!overwrite && driverExists()) {
-            return;
-        }
+    public void downloadDriver(boolean overwrite) {
 
         File driverLocation = getDriverLocation();
-        driverPath.mkdirs();
-
-        try {
-            FileUtils.copyURLToFile(new URL(driver.getDownloadUrl()), driverLocation);
-            URLClassLoader driverLoader = new URLClassLoader(new URL[]{driverLocation.toURI().toURL()}, classLoader);
-            driverLoader.loadClass(driver.getDriverClass());
-        } catch (IOException e) {
-            throw new IOException("Unable to download " + driver.getIdentifier() + " driver from " + driver.getDownloadUrl() + " to " + driverLocation.getAbsolutePath());
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException("Unable to find " + driver.getIdentifier() + " driver class " + driver.getDriverClass() + " inside " + driverLocation.getAbsolutePath(), e);
+        if (overwrite || !driverExists()) {
+            DriverMapping driver = config.getDriver();
+            try {
+                config.getDriverPath().mkdirs();
+                FileUtils.copyURLToFile(new URL(driver.getDownloadUrl()), driverLocation);
+            } catch (IOException e) {
+                throw new RuntimeException("Unable to download " + driver.getIdentifier() + " driver from " + driver.getDownloadUrl() + " to " + driverLocation.getAbsolutePath());
+            }
         }
     }
 
-    public void downloadDriver() throws IOException {
+    public void downloadDriver() {
 
         downloadDriver(false);
     }
@@ -119,18 +77,32 @@ public class EbeanWrapper implements AutoCloseable {
     public Database getDatabase() {
 
         if (database == null) {
-            return open();
+            return connect();
         }
 
         return database;
     }
 
-    public Database open() {
+    public Database connect() {
 
         ClassLoader originalContextClassLoader = Thread.currentThread().getContextClassLoader();
-        Thread.currentThread().setContextClassLoader(classLoader);
 
-        database = DatabaseFactory.create(databaseConfig);
+        DriverMapping driver = config.getDriver();
+        File driverLocation = getDriverLocation();
+
+        if (config.isAutoDownloadDriver()) {
+            downloadDriver();
+        }
+
+        try {
+            ClassLoader classLoader = new URLClassLoader(new URL[]{driverLocation.toURI().toURL()}, config.getClassLoader());
+            Thread.currentThread().setContextClassLoader(classLoader);
+            Class.forName(driver.getDriverClass(), true, classLoader);
+        } catch (MalformedURLException | ClassNotFoundException e) {
+            throw new RuntimeException("Unable to find " + driver.getIdentifier() + " driver class " + driver.getDriverClass() + " inside " + driverLocation.getAbsolutePath(), e);
+        }
+
+        database = DatabaseFactory.create(config.getDatabaseConfig());
 
         Thread.currentThread().setContextClassLoader(originalContextClassLoader);
 
@@ -140,6 +112,7 @@ public class EbeanWrapper implements AutoCloseable {
     @Override
     public void close() {
 
-        database = null;
+        database.shutdown(true, true);
+        this.database = null;
     }
 }
